--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 
-server.port=8081
+server.port=8083
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_pay_roll
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=Revenge@3453
+
+spring.jpa.hibernate.ddl-auto=update
