--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+spring.profile.active=production
 
 server.port=8083
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_pay_roll
+spring.datasource.url=${db_url}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Revenge@3453
+spring.datasource.username=${db_userName}
+spring.datasource.password=${db_password}
 
 spring.jpa.hibernate.ddl-auto=update
